# RapidFit

./: .gitignore  README.md  pyproject.toml
docs/: ANNOTATION_GUIDE.md  DATASET_ANALYSIS_GUIDE.md  ERROR_ANALYSIS_GUIDE.md  HOW_MULTIHEAD_CLASSIFIER.md  INFERENCE_GUIDE.md  README.md  REFINEMENT_GUIDE.md
examples/: README.md  test_augmentation.py  test_augmentation_and_training.py  test_training_classifier.py
src/rapidfit/: __init__.py  io.py  types.py
src/rapidfit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rapidfit/analyzers/: __init__.py  base.py  config.py  dataset.py
src/rapidfit/augmenters/: __init__.py  annotator.py  base.py  llm.py  refiner.py  synthesizer.py
src/rapidfit/classifiers/: __init__.py  base.py  config.py  export.py  multihead.py
src/rapidfit/classifiers/components/: __init__.py  analysis.py  heads.py  losses.py  pooling.py
src/rapidfit/clients/: __init__.py  chat.py
src/rapidfit/prompts/: __init__.py  analyze.txt  annotate.txt  generate.txt  refine_analyze.txt  refine_generate.txt  synthesize.txt
