[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rapidfit"
version = "0.1.7"
description = "Build multi-task classifiers and augment classification datasets with ease"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Abu Bakr Soliman", email = "bakrianoo@gmail.com"}
]
keywords = ["machine-learning", "transformers", "multi-task-learning", "classification", "data-augmentation", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=2.0.0",
    "json-repair>=0.55.0",
    "rich>=14.0.0",
    "torch>=2.0.0",
    "transformers>=4.57.3",
    "datasets>=4.2.0",
    "scikit-learn>=1.6.1",
    "accelerate>=0.26.0",
]

[project.optional-dependencies]
export = [
    "onnx>=1.15.0",
    "onnxruntime>=1.20.0",
    "onnxscript>=0.5.2",
]

[project.urls]
Homepage = "https://github.com/bakrianoo/RapidFit"
Repository = "https://github.com/bakrianoo/RapidFit"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rapidfit = ["prompts/*.txt"]
